--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,8 +1,22 @@
 .main-content {
-    flex: 1;
-    padding: 2rem;
-    box-sizing: border-box;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  flex: 1;
+  box-sizing: border-box;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  max-width: 1600px;
+  margin: 0 auto;
+  padding: 2rem;
+}
+
+@media (min-width: 1800px) {
+  .main-content {
+    padding: 2rem 5%;
   }
+}
+
+@media (max-width: 768px) {
+  .main-content {
+    padding: 1rem;
+  }
+}
