--- a/src/css/Favorites.css
+++ b/src/css/Favorites.css
@@ -88,7 +88,7 @@
   
    .movies-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr, 1fr, 1fr, 1fr));  
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));  
     gap: 2rem;
     padding: 1rem;
     width: 100%;
