--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,10 +1,10 @@
 .navbar {
-  background-color: #111111;
-  padding: 1rem 2rem;
+  background-color: #1b1a1a;
+  padding: 0.3rem 2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 8px rgba(36, 35, 35, 0.3);
   border-bottom: 1px solid #222;
 }
 
