--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -6,6 +6,7 @@
   align-items: center;
   box-shadow: 0 4px 8px rgba(36, 35, 35, 0.3);
   border-bottom: 1px solid #222;
+  position: relative;
 }
 
 .navbar-brand {
@@ -38,6 +39,26 @@
   color: #ff0a16;
 }
 
+.hamburger {
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;
+  height: 25px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  z-index: 10;
+}
+
+.hamburger-line {
+  width: 100%;
+  height: 2px;
+  background-color: #e50914;
+  transition: all 0.3s;
+}
+
 @media (max-width: 768px) {
   .navbar {
     padding: 1rem;
@@ -47,11 +68,46 @@
     font-size: 1.2rem;
   }
 
+  .hamburger {
+    display: flex;
+  }
+
   .navbar-links {
+    position: absolute;
+    right: 0;
+    top: 100%;
+    flex-direction: column;
+    background-color: #1b1a1a;
+    width: 100%;
+    align-items: center;
+    padding: 1rem 0;
     gap: 1rem;
+    transform: translateY(-150%);
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 4px 8px rgba(36, 35, 35, 0.3);
+  }
+
+  .navbar-links.active {
+    transform: translateY(0);
+    opacity: 1;
   }
 
   .nav-link {
-    padding: 0.5rem;
+    width: 100%;
+    text-align: center;
+    padding: 0.8rem;
+  }
+
+  .hamburger.active .hamburger-line:first-child {
+    transform: rotate(45deg) translate(5px, 5px);
+  }
+
+  .hamburger.active .hamburger-line:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.active .hamburger-line:last-child {
+    transform: rotate(-45deg) translate(7px, -7px);
   }
 }
