--- a/src/css/MovieCard.css
+++ b/src/css/MovieCard.css
@@ -154,7 +154,7 @@
 .movie-genres {
   color: #e50914;
   font-size: 0.85rem;
-  margin: 0.3rem 0 0;
+  margin: 0;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
